# CDMFT-LANC-ED

./: .gitignore  CDMFT_ED.f90  CMakeLists.txt  ED_AUX_FUNX.f90  ED_DIAG.f90  ED_EIGENSPACE.f90  ED_GF_NORMAL.f90  ED_GREENS_FUNCTIONS.f90  ED_HAMILTONIAN.f90  ED_INPUT_VARS.f90  ED_MAIN.f90  ED_OBSERVABLES.f90  ED_SECTOR.f90  ED_SETUP.f90  ED_VARS_GLOBAL.f90  ED_VERSION.f90  README.md  TODO.md
ED_BATH/: ED_BATH.f90  ED_BATH_AUX.f90  ED_BATH_DIM.f90  ED_BATH_DMFT.f90  ED_BATH_FUNCTIONS.f90  ED_BATH_REPLICA.f90  ED_BATH_USER.f90
ED_FIT/: CMakeLists.txt  ED_FIT_BATH.f90  ED_FIT_COMMON.f90  ED_FIT_GENERAL.f90  ED_FIT_REPLICA.f90
ED_FIT/general/: chi2_delta_general.f90  chi2_weiss_general.f90  delta_general.f90  weiss_general.f90
ED_FIT/replica/: chi2_delta_replica.f90  chi2_weiss_replica.f90  delta_replica.f90  weiss_replica.f90
ED_IO/: CMakeLists.txt  ED_IO.f90  get_g0imp.f90  get_gand_bath.f90  get_gimp.f90  get_sigma.f90
ED_IO/observables/: get_dens.f90  get_docc.f90  get_doubles.f90  get_energy.f90  get_mag.f90  get_phi.f90
ED_IO/rdm/: get_rdm.f90  get_sp_dm.f90
ED_NORMAL/: CMakeLists.txt  ED_DIAG_NORMAL.f90  ED_GF_NORMAL.f90  ED_HAMILTONIAN_NORMAL.f90  ED_HAMILTONIAN_NORMAL_COMMON.f90  ED_HAMILTONIAN_NORMAL_DIRECT_HxV.f90  ED_HAMILTONIAN_NORMAL_STORED_HxV.f90  ED_OBSERVABLES_NORMAL.f90
ED_NORMAL/direct/: HxV_dw.f90  HxV_local.f90  HxV_non_local.f90  HxV_up.f90
ED_NORMAL/direct_mpi/: HxV_dw.f90  HxV_local.f90  HxV_non_local.f90  HxV_up.f90
ED_NORMAL/stored/: H_dw.f90  H_local.f90  H_non_local.f90  H_up.f90
ED_SUPERC/: ED_DIAG_SUPERC.f90  ED_GF_SUPERC.f90  ED_HAMILTONIAN_SUPERC.f90  ED_HAMILTONIAN_SUPERC_COMMON.f90  ED_HAMILTONIAN_SUPERC_DIRECT_HxV.f90  ED_HAMILTONIAN_SUPERC_STORED_HxV.f90  ED_OBSERVABLES_SUPERC.f90
ED_SUPERC/direct/: HxVbath.f90  HxVimp.f90  HxVimp_bath.f90  HxVint.f90
ED_SUPERC/stored/: Hbath.f90  Himp.f90  Himp_bath.f90  Hint.f90
cmake/: MainConfig.cmake
drivers/: cdn_hm_2dsquare.f90
