# CDMFT library
FILE(GLOB ED_NORMAL_LIB_SRC
  ED_HAMILTONIAN_NORMAL_COMMON.f90
  ED_HAMILTONIAN_NORMAL_STORED_HxV.f90
  ED_HAMILTONIAN_NORMAL_DIRECT_HxV.f90
  ED_HAMILTONIAN_NORMAL.f90
  ED_DIAG_NORMAL.f90
  ED_GF_NORMAL.f90
  ED_OBSERVABLES_NORMAL.f90
  )
ADD_LIBRARY(ED_NORMAL_LIB OBJECT  ${ED_NORMAL_LIB_SRC})

